--- a/test-cases.yml
+++ b/test-cases.yml
@@ -107,7 +107,7 @@
     товары фильтруются в пределах установленных значений
     ---
    - summary: |
-    Выбор товаров в приложении.
+    добавление товаров в корзину
   requirement: |
     При нажатии на кнопку Добавить товар оказывается в корзине
   prerequisites: |
