--- a/test-cases.yml
+++ b/test-cases.yml
@@ -178,7 +178,7 @@
  - summary: |
     Сохранение товаров в корзине
   requirement: |
-    при нажатии в Корзине кнопки Продолжить покупка, переходим к выбору товаров, при этом товары в корзине сохраняются
+    при нажатии в Корзине кнопки Продолжить покупку, переходим к выбору товаров, при этом товары в корзине сохраняются
   prerequisites: |
     В корзине есть функция продолжения покупок
   test-data: |
