--- a/test-cases.yml
+++ b/test-cases.yml
@@ -190,7 +190,7 @@
     товары в корзине сохраняются
     ---   
   - summary: |
-    Увеличение количества товаров в корзине
+    Изменение количества товаров в корзине
   requirement: |
     в корзине, в поле товара пользователь может добавить количетво товара 
   prerequisites: |
