--- a/test-cases.yml
+++ b/test-cases.yml
@@ -2,13 +2,13 @@
 - summary: |
     Открытие приложения.
   requirement: |
-    При нажатии на ссылку в приложении пользователь попадает на страницу приложения.
+    При нажатии на ссылку приложения пользователь попадает на страницу приложения.
   prerequisites: |
     имеем возможность ввести адрес ссылки в строку поиска
   test-data: |
     адрес ссылки
   steps:
-    - вводим # https://hexlet-products-store.vercel.app/ в строку поиска
+    - вводим в строку поиска https://hexlet-products-store.vercel.app/ 
     - нажимаем ввод
   expected-result: |
     Открывается приложение
@@ -234,7 +234,7 @@
     открывается окно ввода данных 
     
 - summary: |
-    Правильность ввода данных
+    Правильный ввод данных
   requirement: |
     При вводе существующего Email и правильного телефона заказ оформляется
   prerequisites: |
