--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,6 +1,6 @@
 ---
 - summary: |
-    Открытие приложения.
+    Открытие сайта.
   requirement: |
     При нажатии на ссылку приложения пользователь попадает на страницу приложения.
   prerequisites: |
@@ -23,6 +23,9 @@
     GoogleChrome, Яндекс, Microsoft Edge, Firefox 
   steps:
     - открываем приложение в браузере
+    - выбираем товары
+    - переходим в корзину
+    - оформляем заказ
   expected-result: |
     приложение работает корректно
     
@@ -31,9 +34,9 @@
   requirement: |
     При выборе языка в приложении язык меняется в шапке сайта, фильтрационных полях, описании товаров. 
   prerequisites: |
-    в шапке сайта имеем кнопку выбора языка
+    открыта страница сайта
   test-data: |
-    в кнопке выбора языка имеем варианты выбора языка
+    тестовых данных нет
   steps:
     - нажимаем на кнопку Язык
     - Выбираем язык
@@ -45,9 +48,9 @@
   requirement: |
     При вводе в фильтр название бренда или товара, товары фильтруются
   prerequisites: |
-    Имеем поле с выбором товаров по названию
+    открыта страница сайта
   test-data: |
-    Поле фильтрации Поиск
+    тестовых данных нет
   steps:
     - пишем в поле название бренда или товара 
   expected-result: |
@@ -58,9 +61,9 @@
   requirement: |
     При выборе категории в фильтре, товары фильтруются
   prerequisites: |
-    Имеем кнопку с выбором категории товаров
+    открыта страница сайта
   test-data: |
-    Кнопка категории
+    тестовых данных нет
   steps:
     - Нажимаем на кнопку категории
     - из выпадающего списка выбираем категорию
@@ -72,9 +75,9 @@
   requirement: |
     При выставлении фильтра по производителю, товары фильтруются согласно запросу
   prerequisites: |
-    Имеем фильтр выбора производителей
+    открыта страница сайта
   test-data: |
-    Поле фильтрации производитель
+    тестовых данных нет
   steps:
     - нажимаем на  фильтр производитель
     - из выпадающего списка выбираем производителей
@@ -86,9 +89,9 @@
   requirement: |
     При нажатии на фильр товаров по наличию, товары фильтруются
   prerequisites: |
-    Имеем поле с фильтром товаров по наличию
+    открыта страница сайта
   test-data: |
-    Поле фильтрации Наличие
+    тестовых данных нет
   steps:
     - устанавливаем галочку на фильтре 
   expected-result: |
@@ -99,9 +102,9 @@
   requirement: |
     При выставлении цен в фильтре товары фильтруются
   prerequisites: |
-    Имеем поле с выбором товаров по цене
+    открыта страница сайта
   test-data: |
-    Поле фильтрации Цена
+    тестовых данных нет
   steps:
     - устанавливаем желаемое минимальное значение
     - устанавливаем желаемое максимальное значение
@@ -113,9 +116,9 @@
   requirement: |
     При нажатии на кнопку Добавить товар оказывается в корзине
   prerequisites: |
-    Имеем кнопку Добавить в любом окне товара
+    открыта страница сайта
   test-data: |
-    Кнопка Добавить
+    тестовых данных нет
   steps:
     - нажимаем кнопку Добавить 
   expected-result: |
@@ -126,9 +129,9 @@
   requirement: |
     При нажатии на кнопку Следующая или Предыдущая, страница в приложении обновляется с новыми товарами или предыдущими
   prerequisites: |
-    Имеем кнопки постраничного просмотра
+    открыта страница сайта
   test-data: |
-    Кнопки Предыдущая, Следующая
+    тестовых данных нет
   steps:
     - нажимаем на кнопку Следующая
     - нажимаем на кнопку Предыдущая
@@ -140,9 +143,9 @@
   requirement: |
     при переходе имеются поля - Название, количество, сумма товара, итоговая сумма
   prerequisites: |
-     Информационные поля
+     открыта страница сайта
   test-data: |
-    Окно Корзины
+    тестовых данных нет
   steps:
     - нажимаем на Корзину
     - переходим в окно Корзины
@@ -153,9 +156,9 @@
   requirement: |
     при переходе в Корзину, выбранные товары присутствуют в корзине
   prerequisites: |
-    в шапке сайта имеем кнопку Корзина
+    открыта страница сайта
   test-data: |
-    кнопка Корзина
+    тестовых данных нет
   steps:
     - Нажимаем на корзину
     - попадаем в окно с выбранными товарами
@@ -167,9 +170,9 @@
   requirement: |
     При выходе из корзины сайт не должен перезагружаться
   prerequisites: |
-    имеем кнопку Магазин
+    открыта страница сайта
   test-data: |
-    Кнопка Магазин
+    тестовых данных нет
   steps:
     - нажимаем на кнопку магазин
     - попадаем в окно выбора товаров
@@ -181,12 +184,14 @@
   requirement: |
     при нажатии в Корзине кнопки Продолжить покупку, переходим к выбору товаров, при этом товары в корзине сохраняются
   prerequisites: |
-    В корзине есть функция продолжения покупок
+    открыта страница сайта
   test-data: |
-    кнопка Продолжить покупки
+    тестовых данных нет
   steps:
+    - выбираем товар
+    - переходим в корзину
     - Продолжить покупки
-    - переходим на страницу с товарами
+    - переходим в корзину
   expected-result: |
     товары в корзине сохраняются 
     
@@ -195,12 +200,13 @@
   requirement: |
     в корзине, в поле товара пользователь может добавить количетво товара 
   prerequisites: |
-    В корзине товаров есть функция изменения количества товаров
+    открыта страница сайта
   test-data: |
-    кнопка регулировки количества товаров
+    тесовых данных нет
   steps:
+    - выбираем товары
     - нажимаем на корзину
-    - выбираем товар
+    - нажимаем на строку товара
     - добавляем количество
   expected-result: |
     количество товара меняется
@@ -210,10 +216,11 @@
   requirement: |
     При удалении товара из корзины, товар удаляется 
   prerequisites: |
-    В корзине товаров есть функция удаления товаров
+    открыта страница сайта
   test-data: |
-    кнопка Удалить
+    тестовых данных нет
   steps:
+    - выбираем товар 
     - нажимаем на корзину
     - выбираем товар
     - нажимаем удалить
@@ -225,37 +232,43 @@
   requirement: |
     При оформлении заказапользователь вводит свои данные (Email и телефон) для подтверждения заказа
   prerequisites: |
-    Функция оформления заказов
+    открыта страница сайта
   test-data: |
-    кнопка Оформить заказ
+    тестовых данных нет
   steps:
     - нажимаем на кнопку Оформить заказ
   expected-result: |
     открывается окно ввода данных 
     
 - summary: |
-    Правильный ввод данных
+    корректрный ввод данных при оформлении заказа
   requirement: |
     При вводе существующего Email и правильного телефона заказ оформляется
   prerequisites: |
-    поле ввода информации
+    открыта страница сайта
   test-data: |
     Login=Email телефон=8(ХХХ)ХХХХХХХ
   steps:
+    - выбираем товар
+    - заходим в корзину
+    - нажимаем оформление заказа
     - Вводим Email
     - ввводим телефон
   expected-result: |
     заказ успешно оформлен
     
 - summary: |
-    Оформление покупки с несуществующими логином и телефоном
+    Ошибочный, некорректный ввод данных при оформлении заказа
   requirement: |
     При неправильном логине или телефоне пользователь должен получить сообщение об ошибке
   prerequisites:
-    Открыта страница логина
+    Открыта страница сайта
   test-data: |
     Логин = Email = badlog Телефон = badtel
   steps:
+    - выбираем товар
+    - заходим в корзину
+    - нажимаем оформление заказа
     - Вводим логин
     - Вводим телефон
   expected-result: |
