--- a/test-cases.yml
+++ b/test-cases.yml
@@ -112,6 +112,36 @@
     товары фильтруются в пределах установленных значений
     
 - summary: |
+    отрицательные значения в ценовой категории
+  requirement: |
+    при вводе отрицательных значений в поле цены автоматически устанавливается 0
+  prerequisites: |
+    открыта страница сайта
+  test-data: |
+    тестовых данных нет
+  steps:
+    - нажимаем на поле фильтрации по цене
+    - устанавливаем отрицательное значение
+  expected-result: |
+    отрицательное значение меняется на 0 
+    
+- summary: |
+    потск товара по хештегу
+  requirement: |
+    при вводе ссылки товара в строку поиска, в браузере открывается товар
+  prerequisites: |
+    открыта страница сайта
+  test-data: |
+    тестовых данных нет
+  steps:
+    - выбираем товар
+    - копируем ссылку товара
+    - вставляем ссылку в браузер
+    - нажимаем поиск
+  expected-result: |
+    товар открывается в новом окне
+    
+- summary: |
     добавление товаров в корзину
   requirement: |
     При нажатии на кнопку Добавить товар оказывается в корзине
