--- a/test-cases.yml
+++ b/test-cases.yml
@@ -30,6 +30,20 @@
     приложение работает корректно
     
 - summary: |
+    Адаптивность сайта к мобильной версии
+  requirement: |
+    Приложение должно работать корректно на мобильных устройствах
+  prerequisites: |
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    https://search.google.com/test/mobile-friendly?hl=ru 
+  steps:
+    - вставляем ссылку в программу по проверке оптимизации
+    - нажимаем проверить
+  expected-result: |
+    приложение успешно проходит проверку по оптимизации для мобильных устройств
+    
+- summary: |
     Смена языка в приложении
   requirement: |
     При выборе языка в приложении язык меняется в шапке сайта, фильтрационных полях, описании товаров. 
