--- a/bugreports.yml
+++ b/bugreports.yml
@@ -18,10 +18,11 @@
     https://hexlet-products-store.vercel.app/
   steps-to-reproduce: |
     1-зайти на страницу магазина
+    2-убрать галочку с поля in stock
   expected-result: |
-    при входе на страницу магазина появляется список товаров
+    при отсутствии галочки на in stock товары отображаются
   actual-result: |
-    товары не появляются
+    товары не отображаются
     
 - summary: |
     отсутствие пустого поля во вкладке Категории
