--- a/requirements.yml
+++ b/requirements.yml
@@ -11,4 +11,7 @@ non-functional:
   - Сайт должен быть безопасным и защищать данные пользователя.
   - Сайт должен быть доступен на различных устройствах.
 implicit:
+  - сайт должен адаптироваться по ценам в зависимости от региона использования
+  - сайт не должен содержать орфографических ошибок 
+  - сайт должен быть интуитивно понятен и удобен в использовании
   
