--- a/regress-report.yml
+++ b/regress-report.yml
@@ -26,7 +26,7 @@ test-cases:
 
   - summary: |
       Фильтрация товаров по производителю
-    status: Fail
+    status: fail
 
   - summary: |
       Фильтрация товаров по наличию в магазине
